# pt-agent

./: .env.example  .gitignore  README.md  create_knowledge_base_table.sql  create_user_profiles_table.sql  implementation_plan.md  main.py  phase_2_plan.md  prd.md  pyproject.toml  requirements.txt  setup.py
.git.bak/: COMMIT_EDITMSG  config  index
.git.bak/logs/refs/heads/: main
.git.bak/refs/heads/: main
personal_ai_trainer/: exceptions.py
personal_ai_trainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
personal_ai_trainer/agents/: __init__.py  base_agent.py  communication.py  openai_integration.py
personal_ai_trainer/agents/biometric_agent/: __init__.py  agent.py  oura_client.py
personal_ai_trainer/agents/biometric_agent/tools/: historical_analysis.py  plan_adjustment.py  readiness_calculation.py
personal_ai_trainer/agents/orchestrator_agent/: __init__.py  agent.py
personal_ai_trainer/agents/research_agent/: __init__.py  agent.py
personal_ai_trainer/cli/: __init__.py  main.py
personal_ai_trainer/cli/commands/: log.py  plan.py  profile.py  progress.py  research.py
personal_ai_trainer/config/: __init__.py  config.py
personal_ai_trainer/database/: __init__.py  connection.py  models.py  user_repository.py
personal_ai_trainer/di/: __init__.py  container.py  provider.py
personal_ai_trainer/knowledge_base/: __init__.py  embeddings.py  processor.py  repository.py
personal_ai_trainer/tests/: conftest.py  integration_test.py  test_integration.py
personal_ai_trainer/utils/: __init__.py  error_handling.py  scheduler.py
(+8 files in other folders)
