[project]
name = "pt-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agency-swarm>=0.5.1",
    "numpy>=2.2.5",
    "openai>=1.77.0",
    "oura>=1.3.0",
    "pgvector>=0.4.1",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "rich>=14.0.0",
    "schedule>=1.2.2",
    "supabase>=2.15.1",
    "tenacity>=9.1.2",
    "typer>=0.15.3",
]
